# yandex-cpp-belts

Black/Week1/PartE/: CMakeLists.txt  main.cpp
Black/Week1/Task1/: main  main.cpp
Black/Week1/Task2/: main  main.cpp
Black/Week1/Task4/: main.cpp
Black/Week1/partF/: CMakeLists.txt  main.cpp
Black/Week1/partF_new/: CMakeLists.txt  main.cpp
Black/Week2/Task1/: main.cpp
Black/Week2/Task2/: CMakeLists.txt  main.cpp  saveload.h
Black/Week2/Task3/: CMakeLists.txt  contact.proto  main.cpp  phone_book.cpp  phone_book.h
Black/Week2/Task4/: CMakeLists.txt  main.cpp  merge.cpp  yellow_pages.h
Black/Week2/test_buf/: CMakeLists.txt  main.cpp  test.proto
Black/Week3/Task1/: main.cpp
Black/Week3/Task2/: CMakeLists.txt  lexer.cpp  main.cpp
Black/Week3/Task3/: CMakeLists.txt  comparators.cpp  lexer.h  mython.cpp  object.cpp  object.h  object_holder.cpp  object_holder_test.cpp  object_test.cpp  statement.cpp  statement.h
Black/Week3/partJ/: main.cpp  svg.cpp  test_runner.cpp
Black/Week3/partL/: main.cpp
Black/Week4/Task1/: CMakeLists.txt  optional.h
Black/Week4/Task2/: main.cpp
Black/Week4/Task3/: main.cpp
Black/Week4/Task4/: CMakeLists.txt  (+2 more)
Brown/BossFight/PartA-B/: CMakeLists.txt  UnitTestsFramework.h  bus_stops_tests.cpp  bus_stops_tests.h  main.cpp  routes_database.cpp  routes_database.h  routes_database_tests.cpp  routes_database_tests.h  stops_database.cpp  stops_database.h  transport_guide_manager.cpp  transport_guide_manager.h  transport_guide_manager_tests.cpp  transport_guide_manager_tests.h  transport_guide_tests.cpp  transport_guide_tests.h
(+320 files in other folders)
